# marine_robots_project

./: .env  .gitignore  README.md  docker-compose.yml
docker/: Dockerfile  entrypoint.sh
ros_ws/env/: ros_aliases.sh  ros_entrypoint.sh
ros_ws/src/base_packages/bluerov2/bluerov2_control/rviz/: bluerov2_control.rviz  video_servoing.rviz
ros_ws/src/base_packages/bluerov2/bluerov2_description/launch/: upload.launch
ros_ws/src/base_packages/bluerov2/bluerov2_description/urdf/: sensors.xacro
ros_ws/src/base_packages/bluerov2/bluerov2_perception/: CMakeLists.txt  package.xml
ros_ws/src/project_packages/control/position_control/: CMakeLists.txt  package.xml
ros_ws/src/project_packages/perception/: README.md
ros_ws/src/project_packages/perception/sphere_target_tracking/: CMakeLists.txt  package.xml
ros_ws/src/project_packages/perception/target_tracking/: CMakeLists.txt  package.xml  setup.py  setup.py.save
ros_ws/src/project_packages/project_base/: CMakeLists.txt  package.xml
ros_ws/src/project_packages/project_base/launch/: bringup.launch  simulation_base.launch  simulation_target.launch  stack.launch
ros_ws/src/project_packages/project_base/rviz/: video_servoing.rviz
ros_ws/src/project_packages/sphere_target/: README.md
ros_ws/src/project_packages/sphere_target/sphere_target_control/: CMakeLists.txt  package.xml
ros_ws/src/project_packages/sphere_target/sphere_target_description/: CMakeLists.txt  package.xml
ros_ws/src/project_packages/sphere_target/sphere_target_motion/: CMakeLists.txt  package.xml
utils/: aliases.sh
(+73 files in other folders)
